Bug 168828 - crash when closing last.fm settings dialog
Summary: crash when closing last.fm settings dialog
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-09 23:40 UTC by Attilio Pascotto
Modified: 2009-12-09 11:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Amarok crash (18.69 KB, text/plain)
2008-08-09 23:54 UTC, Mikko C.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Attilio Pascotto 2008-08-09 23:40:20 UTC
Version:           2.0-SVN (using 4.1.60 (KDE 4.1.60 (KDE 4.2 >= 20080709)), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.25-gentoo-r7

- play some last.fm radio, for example The Beatles similar artists
- go to Amarok settings
- go to last.fm settings
- close the window of my last.fm account details
- close the window of Amarok Radio Settings
- crash
Comment 1 Attilio Pascotto 2008-08-09 23:45:14 UTC
Application: Amarok (amarok), signal SIGSEGV
Using host libthread_db library "/lib/libthread_db.so.1".
[Current thread is 0 (LWP 8144)]

Thread 17 (Thread 0xb174cb90 (LWP 8145)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f67ec in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb2122964 in metronom_sync_loop () from /usr/lib/libxine.so.1
#3  0x086881f0 in ?? ()
#4  0x08688208 in ?? ()
#5  0xb174c36c in ?? ()
#6  0x489e0435 in ?? ()
#7  0x057f7498 in ?? ()
#8  0x489e0430 in ?? ()
#9  0x0001684f in ?? ()
#10 0xb6100ff4 in ?? () from /lib/libpthread.so.0
#11 0x00000000 in ?? ()

Thread 16 (Thread 0xb0f4bb90 (LWP 8146)):
#0  0xb4d7e01a in clock_gettime () from /lib/librt.so.1
#1  0xb64d6792 in QTimerInfoList::getTime () from /usr/lib/qt4/libQtCore.so.4
#2  0x000e8481 in ?? ()
#3  0xb64d728d in QTimerInfoList::timerWait () from /usr/lib/qt4/libQtCore.so.4
#4  0xb60f57cc in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 15 (Thread 0xb0740b90 (LWP 8149)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f8ffb in read () from /lib/libpthread.so.0
#2  0xb3aac0e1 in snd_ctl_hw_read () from /usr/lib/libasound.so.2
#3  0xb0740220 in ?? ()
#4  0x00000048 in ?? ()
#5  0x000a92e4 in ?? ()
#6  0xb3a844ec in ?? () from /usr/lib/libasound.so.2
#7  0xb3b21ff4 in ?? () from /usr/lib/libasound.so.2
#8  0xb3b21ff4 in ?? () from /usr/lib/libasound.so.2
#9  0xb3aa9ab3 in snd_ctl_read () from /usr/lib/libasound.so.2
#10 0xb0740220 in ?? ()
#11 0x08697af0 in ?? ()
#12 0x00000001 in ?? ()
#13 0xb3aa9a87 in snd_async_handler_get_ctl () from /usr/lib/libasound.so.2
#14 0xb3b21ff4 in ?? () from /usr/lib/libasound.so.2
#15 0xb3aa6466 in snd_hctl_handle_events () from /usr/lib/libasound.so.2
#16 0xb0740220 in ?? ()
#17 0x00000000 in ?? ()

Thread 14 (Thread 0xafefdb90 (LWP 8150)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb2130687 in fifo_peek_int () from /usr/lib/libxine.so.1
#3  0x08f94b18 in ?? ()
#4  0xb2157ff4 in ?? () from /usr/lib/libxine.so.1
#5  0x00000000 in ?? ()

Thread 13 (Thread 0xaeea1b90 (LWP 8153)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb63c4c91 in QWaitCondition::wait () from /usr/lib/qt4/libQtCore.so.4
#3  0xb56c89ac in QHostInfoAgent::run () from /usr/lib/qt4/libQtNetwork.so.4
#4  0xb63c41cc in QThreadPrivate::start () from /usr/lib/qt4/libQtCore.so.4
#5  0xb60f217b in start_thread () from /lib/libpthread.so.0
#6  0xb518409e in clone () from /lib/libc.so.6

Thread 12 (Thread 0xaf6a2b90 (LWP 8155)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb63c4c91 in QWaitCondition::wait () from /usr/lib/qt4/libQtCore.so.4
#3  0xb71569c5 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/kde/svn/lib/libthreadweaver.so.4
#4  0x088cac09 in ?? ()
#5  0x08c18c70 in ?? ()
#6  0x08e50621 in ?? ()
#7  0xb715fff4 in ?? () from /usr/kde/svn/lib/libthreadweaver.so.4
#8  0x00000000 in ?? ()

Thread 11 (Thread 0xadb29b90 (LWP 8156)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb63c4c91 in QWaitCondition::wait () from /usr/lib/qt4/libQtCore.so.4
#3  0xb71569c5 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/kde/svn/lib/libthreadweaver.so.4
#4  0x088cac09 in ?? ()
#5  0x08c18c70 in ?? ()
#6  0x08e50621 in ?? ()
#7  0xb715fff4 in ?? () from /usr/kde/svn/lib/libthreadweaver.so.4
#8  0x00000000 in ?? ()

Thread 10 (Thread 0xacf1ab90 (LWP 8157)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb517d7d1 in select () from /lib/libc.so.6
#2  0xb2147de5 in xine_usec_sleep () from /usr/lib/libxine.so.1

Thread 9 (Thread 0xac330b90 (LWP 8158)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb212588a in fifo_buffer_get () from /usr/lib/libxine.so.1
#3  0x00000003 in ?? ()
#4  0xb2157ff4 in ?? () from /usr/lib/libxine.so.1
#5  0x0904d76c in ?? ()
#6  0xb2157ff4 in ?? () from /usr/lib/libxine.so.1
#7  0x09060fa8 in ?? ()
#8  0x00000002 in ?? ()
#9  0x09136d90 in ?? ()
#10 0xb212b2b4 in video_decoder_loop () from /usr/lib/libxine.so.1
#11 0x091376b0 in ?? ()

Thread 8 (Thread 0xab962b90 (LWP 8159)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb212588a in fifo_buffer_get () from /usr/lib/libxine.so.1
#3  0x08688338 in ?? ()
#4  0xb2157ff4 in ?? () from /usr/lib/libxine.so.1
#5  0x08e22904 in ?? ()
#6  0xb2157ff4 in ?? () from /usr/lib/libxine.so.1
#7  0xffffffff in ?? ()
#8  0x09137698 in ?? ()
#9  0x09136d90 in ?? ()
#10 0xb212c2f7 in audio_decoder_loop () from /usr/lib/libxine.so.1
#11 0x00000000 in ?? ()

Thread 7 (Thread 0xab161b90 (LWP 8160)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb2134643 in xine_event_wait () from /usr/lib/libxine.so.1
#3  0x08f94e24 in ?? ()
#4  0x08f94e20 in ?? ()
#5  0x00000001 in ?? ()
#6  0xb21346d2 in listener_loop () from /usr/lib/libxine.so.1
#7  0x00000000 in ?? ()

Thread 6 (Thread 0xaa960b90 (LWP 8161)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f8c1e in __lll_mutex_lock_wait () from /lib/libpthread.so.0
#2  0xb60f4a83 in _L_mutex_lock_50 () from /lib/libpthread.so.0
#3  0xb60f446d in pthread_mutex_lock () from /lib/libpthread.so.0
#4  0xb63c3429 in QMutexPrivate::wait () from /usr/lib/qt4/libQtCore.so.4
#5  0xb63bf28c in QMutex::lock () from /usr/lib/qt4/libQtCore.so.4
#6  0xae030df4 in StopWatch::run (this=0x8a49864) at /var/tmp/paludis/media-sound-amarok-scm/work/amarok/amarok/src/browsers/servicebrowser/lastfm/libUnicorn/StopWatch.cpp:166
#7  0xb63c41cc in QThreadPrivate::start () from /usr/lib/qt4/libQtCore.so.4
#8  0xb60f217b in start_thread () from /lib/libpthread.so.0
#9  0xb518409e in clone () from /lib/libc.so.6

Thread 5 (Thread 0xaa15fb90 (LWP 8162)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb5150866 in nanosleep () from /lib/libc.so.6
#2  0xb515068b in sleep () from /lib/libc.so.6
#3  0xb7c7380c in KCrash::startDrKonqi () from /usr/kde/svn/lib/libkdeui.so.5
#4  0x00000000 in ?? ()

Thread 4 (Thread 0xa892fb90 (LWP 8166)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb63c4c91 in QWaitCondition::wait () from /usr/lib/qt4/libQtCore.so.4
#3  0xb71569c5 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned () from /usr/kde/svn/lib/libthreadweaver.so.4
#4  0x088cac09 in ?? ()
#5  0x08c18c70 in ?? ()
#6  0x08e50621 in ?? ()
#7  0xb715fff4 in ?? () from /usr/kde/svn/lib/libthreadweaver.so.4
#8  0x00000000 in ?? ()

Thread 3 (Thread 0xa812eb90 (LWP 8167)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb60f6566 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb63c4c91 in QWaitCondition::wait () from /usr/lib/qt4/libQtCore.so.4
#3  0xb5d8e7bf in QFileInfoGatherer::run () from /usr/lib/qt4/libQtGui.so.4
#4  0xb63c41cc in QThreadPrivate::start () from /usr/lib/qt4/libQtCore.so.4
#5  0xb60f217b in start_thread () from /lib/libpthread.so.0
#6  0xb518409e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xa792db90 (LWP 8168)):
#0  0xb4d7e01a in clock_gettime () from /lib/librt.so.1
#1  0xb64d6792 in QTimerInfoList::getTime () from /usr/lib/qt4/libQtCore.so.4
#2  0xb512ce14 in ?? () from /lib/libc.so.6
#3  0xb51f0120 in ?? () from /lib/libc.so.6
#4  0x09427ba0 in ?? ()
#5  0xb51eeff4 in ?? () from /lib/libc.so.6
#6  0x09427ba0 in ?? ()
#7  0x00002288 in ?? ()
#8  0x37cee6a0 in ?? ()
#9  0xb6592ff4 in ?? () from /usr/lib/qt4/libQtCore.so.4
#10 0x093f5854 in ?? ()
#11 0xb64d683a in QTimerInfoList::updateCurrentTime () from /usr/lib/qt4/libQtCore.so.4
#12 0x09428e80 in ?? ()
#13 0xb60f7175 in pthread_getspecific () from /lib/libpthread.so.0
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 1 (Thread 0xb38ec6f0 (LWP 8144)):
#0  0xb8051424 in __kernel_vsyscall ()
#1  0xb517d7d1 in select () from /lib/libc.so.6
#2  0xb3a65160 in ?? () from /usr/lib/libxcb.so.1
#3  0x00000009 in ?? ()
#4  0xbff66d5c in ?? ()
#5  0xbff66cdc in ?? ()
#6  0x00000000 in ?? ()

Comment 2 Mikko C. 2008-08-09 23:54:37 UTC
Created attachment 26762 [details]
Amarok crash

I can confirm this crash, and I'm attaching another backtrace with more info.
Comment 3 Lydia Pintscher 2008-08-19 00:02:22 UTC
Is this still happening?
Comment 4 Mikko C. 2008-08-20 09:17:54 UTC
yep, with today's svn I can still reproduce it.
More precise way to reproduce:

- play some last.fm radio, for example The Beatles similar artists 
- go to Amarok settings 
- go to last.fm settings 
- click OK in the last.fm settings (don't need to change anything) 
- click OK in the Amarok Radio Settings 
- crash
Comment 5 Mark Kretschmann 2008-08-20 09:28:28 UTC
Yep, I can reproduce it here.
Comment 6 Mark Kretschmann 2008-08-20 20:46:52 UTC
Fixed with commit r850062.
Comment 7 Gary Steinert 2008-08-20 23:35:50 UTC
Amarok no longer crashes, but the last.fm stream stops playing when the dialog is closed. Surely this isn't the desired behaviour.Should I file this as a new bug?
Comment 8 Mark Kretschmann 2008-08-20 23:39:44 UTC
No, that's actually how I fixed it. Currently we don't have a better approach. And how often do people really change their last.fm settings, and also happen to play last.fm radio at the same time? Very rarely.

No need to create a new report.