Fixed crash when closing last.fm settings while playing. (BR 168828)

BUG: 168828

svn path=/trunk/extragear/multimedia/amarok/; revision=850062